correcion de issues